2006-12-08  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/ScrollPane/getScrollPosition.java: New test.
	* gnu/testlet/java/awt/ScrollPane/setScrollPosition.java: New test.

2006-12-07  David Daney  <ddaney@avtrex.com>

	* gnu/testlet/java/net/HttpURLConnection/timeout.java: New test.

2006-12-07  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URL/URLTest.java: Add test for jar base with
	full http spec.

2006-12-07  Mario Torre  <neugens@limasoftware.net>

	* gnu/testlet/java/text/RuleBasedCollator/CollatorTests.java (basicCompare):
	New class.
	(orderComparision): New Test
	(test): Default entry for tests.
	* gnu/testlet/java/text/RuleBasedCollator/VeryBasic.java (test):
	Removed debug output.
	* gnu/testlet/java/text/DecimalFormat/format.java (testLocale):
	Added tests case for locale other than US.

2006-12-06  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/ScrollPane/add.java: Expand test.

2006-12-06  Francis Kung  <fkung@redhat.com>

	* gnu/testlet/java/awt/geom/Rectangle2D/getBounds.java: New test.

2006-12-06  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/border/CompoundBorder/isBorderOpaque.java:
	Added new tests.

2006-12-06  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/border/CompoundBorder.java:
	(isBorderOpaque): New test.

2006-12-05  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/ScrollPane/add.java: New test.

2006-12-01  Mario Torre  <neugens@limasoftware.net>

	* gnu/testlet/java/text/DecimalFormat/format.java (testGeneral): 
	(testLocale): new tests.
	(test): enable new tests.

2006-11-28  Dalibor Topic  <robilad@kaffe.org>

	* gnu/testlet/java/lang/Double/DoubleTest.java: Added test for
	Double.toString(Double.MIN_VALUE).

	* gnu/testlet/java/lang/Float/FloatTest.java: Added test for 
	Float.toString(Float.MIN_VALUE).

2006-11-28  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/border/TitledBorder/getBorderInsets.java: